  primary global address.  This change removes the code path that would block all
  traffic not directed at the primary global address as well as outgoing traffic
  with something other than that primary global address.  It will just always
  apply the simple bogon network range filtering that it used for the explicit
  multiple address case.


uruk version 20150916 - The ᎠᏍᎦᏯ ᎩᎦᎨᏱ; Release

[ changes by Joost van Baal-Ilić ]
- script/urukctl: Behave sane after reboot.  Under some circumstances, after
  a reboot, one would end up with files like

   -rw-r--r--   1 root     root  17658 Sep 11 13:00 iptables/active
   -rw-r--r--   1 root     root      0 Sep 11 13:00 iptables/inactive
   -rw-r--r--   1 root     root      0 Sep 11 13:00 iptables/autosave
   -rw-r--r--   1 root     root   4060 Sep 11 13:00 ip6tables/active
   -rw-r--r--   1 root     root      0 Sep 11 13:00 ip6tables/inactive
   -rw-r--r--   1 root     root      0 Sep 11 13:00 ip6tables/autosave

  in /var/lib/uruk .  Running "sudo service uruk status" would yield

   Checking uruk (iptables): active uruk rules loaded
   Checking uruk (ip6tables): active uruk rules loaded
   [ ok ] Checking uruk (): uruk not running.

  . However, uruk _is_ running.  We now no longer ignore zero-sized files in
  /var/lib/uruk/*/ , but regard them as valid rulesets.  This fixes this bug.


uruk version 20150825 - The Прибој Release

[ changes by Wessel Dankers ]
- script/uruk.in: Fix two cases where $ip6_defined was used without being set.
  uruk was unusable in cases where more than one IPv6 address is defined on an
  interface.


uruk version 20150810 - The Гoрњи Милановац Release

[ changes by Joost van Baal-Ilić ]
- init/uruk: no longer inspect obsolete variable $status_active.  Now "service
  uruk status" will no longer report _both_ 'active uruk rules loaded' _and_
  'active ruleset not loaded' when uruk is running.  Thanks Casper Gielen for
  bugreport.


uruk version 20150608 - The Oude Leije Release
